<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView_questionNumber"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/imageView_questionImage"
        android:layout_below="@+id/textView_questionNumber"
        android:layout_above="@+id/textView_question"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_question"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/textView_question"
        android:layout_above="@+id/button_next"
        android:id="@+id/layout">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    </LinearLayout>

        <Button
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/button_quit"
            android:id="@+id/button_quit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:id="@+id/button_next"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

</RelativeLayout>