<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group5_hw_03.com.triviaquiz.Results"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quizresult"
            android:id="@+id/textView_quizresult"
            android:layout_weight="0.31"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_quizresultdisplay"
            android:layout_weight="0.78" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:id="@+id/imageView_resultimage"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_resulttext" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:id="@+id/button_quit"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.21" />

        <Button
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/tryagain"
            android:id="@+id/button_tryagain"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>
